<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imagee"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/bg3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtShen"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/shen"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/txtDegree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDegree"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.1"
            android:text="@string/s1"
            android:textColor="@color/white"
            android:textSize="45sp"
            app:layout_constraintBottom_toTopOf="@id/txt1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtShen" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/sunday"
            app:layout_constraintBottom_toTopOf="@id/txt3"
            app:layout_constraintEnd_toStartOf="@id/txt2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDegree" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/s1"
            app:layout_constraintBottom_toTopOf="@id/txt4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt1"
            app:layout_constraintTop_toBottomOf="@id/txtDegree" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:contentDescription="@null"
            android:src="@drawable/outline_wb_sunny_24"
            app:layout_constraintBottom_toTopOf="@id/img2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt2"
            app:layout_constraintTop_toBottomOf="@id/txtDegree" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/Pzt"
            app:layout_constraintBottom_toTopOf="@id/txt5"
            app:layout_constraintEnd_toStartOf="@id/txt4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt1" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/s2"
            app:layout_constraintBottom_toTopOf="@id/txt6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt3"
            app:layout_constraintTop_toBottomOf="@id/txt2" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:contentDescription="@null"
            android:src="@drawable/outline_wb_sunny_24"
            app:layout_constraintBottom_toTopOf="@id/img3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt4"
            app:layout_constraintTop_toBottomOf="@id/img1" />

        <TextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/tue"
            app:layout_constraintBottom_toTopOf="@id/txt7"
            app:layout_constraintEnd_toStartOf="@id/txt6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt3" />

        <TextView
            android:id="@+id/txt6"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/s3"
            app:layout_constraintBottom_toTopOf="@id/txt8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt5"
            app:layout_constraintTop_toBottomOf="@id/txt4" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:contentDescription="@null"
            android:src="@drawable/outline_cloud_24"
            app:layout_constraintBottom_toTopOf="@id/img4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt6"
            app:layout_constraintTop_toBottomOf="@id/img2" />

        <TextView
            android:id="@+id/txt7"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/wd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt5" />

        <TextView
            android:id="@+id/txt8"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/s1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt7"
            app:layout_constraintTop_toBottomOf="@id/txt6" />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:contentDescription="@null"
            android:src="@drawable/outline_cloud_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt8"
            app:layout_constraintTop_toBottomOf="@id/img3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>